2005-11-09  Martin Hunt  <hunt@redhat.com>

	* maps/sort2.c: New file.
	* maps/sort_stat.c: New file.
	* maps/map.test: Update

2005-11-08  Martin Hunt  <hunt@redhat.com>

	* maps/map.test: Remove old map API tests.
	* maps/ii2.c: Renamed ii.c.
	* maps/iiss2.c: Renamed iiss.c.
	* maps/is2.c: Renamed is.c.
	* maps/issii2.c: Renamed issii.c.
	* maps/isx2.c: Renamed isx.c.
	* maps/map_format2.c: Renamed map_format.c.
	* maps/si2.c: Renamed si.c.
	* maps/keys.c: Deleted
	* maps/test_list_int64.c: Deleted.
	* maps/test_list_string.c: Deleted.	
	* maps/sort.c: Update to use new map API.

2005-11-08  Martin Hunt  <hunt@redhat.com>

	* pmaps/*: Add new pmaps tests.

2005-10-28  Martin Hunt  <hunt@redhat.com>
	* maps/keys.c: New file. Tests specific to _stp_key_get_*().

	* maps/iiss2.c (main): Add some comments to make clear expected 
	results.
	* maps/is2.c (main): _stp_map_get_*s() now returns "" instead
	of NULL when lookup fails. _stp_map_set_*s() now deletes a node
	when setting to "" (as well as NULL).
	* maps/setadd.c (main): Ditto.
	* maps/map.test: update results.

2005-10-26  Martin Hunt  <hunt@redhat.com>

	* maps/map.test: Add results for iiiiii and ssssss.
	* maps/iiiiii.c: New file.
	* maps/ssssss.c: New file.
	
2005-10-26  Martin Hunt  <hunt@redhat.com>

	* maps/map.test: Add results for issii2.

2005-10-26  Martin Hunt  <hunt@redhat.com>

	* maps/map.test: Update with results for new tests.
	* maps/*2.c: Tests for the new API.
	* maps/ist.c: Renamed isx.c.
	* maps/setadd.c: New test of adding and setting.

2005-09-23  Martin Hunt  <hunt@redhat.com>

	* maps/map.test: Add sort results.
	* maps/sort.c: New test.

2005-09-14  Martin Hunt  <hunt@redhat.com>

	* maps/ii.c (main): Add test for _stp_map_clear().
	* maps/map.test: Update results.

2005-09-12  Martin Hunt  <hunt@redhat.com>

	* math/div64.c (main): Set the expected result for LLONG_MIN/-1 to 
	be LLONG_MIN (overflow) instead of 0.

2005-09-09  Martin Hunt  <hunt@redhat.com>
